--- a/.htaccess
+++ b/.htaccess
@@ -46,3 +46,7 @@ AddOutputFilterByType DEFLATE text/html text/plain text/xml application/xml appl
 
 RewriteCond %{HTTP_HOST} ^www\.(.*)$
 RewriteRule ^(.*)$ http://%1/$1 [L,R=301]
+
+RewriteCond %{SERVER_PORT} ^80$ [OR]
+RewriteCond %{HTTP} =on
+RewriteRule ^(.*)$ https://timdjol.com/$1 [R=301,L]
